# server/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Accountable
-  version: 0.4.2
+  version: 0.4.3
   description: This is the Accountable Server. It doesn't do much, because the Accountable client does most of the hard work. You can read the source code on [GitHub](https://github.com/AverageHelper/accountable-vue).
   license:
     name: GNU General Public License v3.0
@@ -216,6 +216,10 @@ paths:
               schema:
                 type: object
                 properties:
+                  code:
+                    type: string
+                    enum:
+                      - "wrong-credentials"
                   message:
                     type: string
                     enum:
@@ -293,6 +297,10 @@ paths:
               schema:
                 type: object
                 properties:
+                  code:
+                    type: string
+                    enum:
+                      - "wrong-credentials"
                   message:
                     type: string
                     enum:
@@ -354,6 +362,10 @@ paths:
               schema:
                 type: object
                 properties:
+                  code:
+                    type: string
+                    enum:
+                      - "wrong-credentials"
                   message:
                     type: string
                     enum:
@@ -415,6 +427,10 @@ paths:
               schema:
                 type: object
                 properties:
+                  code:
+                    type: string
+                    enum:
+                      - "wrong-credentials"
                   message:
                     type: string
                     enum:
@@ -423,7 +439,7 @@ paths:
     post:
       tags:
         - database
-      summary: "Perform a batch of up to 500 document writes"
+      summary: "Perform a batch of up to 500 document writes for a user"
       description: Does nothing when the batch is empty
       operationId: batch-write
       requestBody:
@@ -486,6 +502,19 @@ paths:
                     type: string
                     enum:
                       - "Invalid data"
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
         404:
           description: The collection not found
           content:
@@ -519,6 +548,19 @@ paths:
             application/json:
               schema:
                 type: object
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
         404:
           description: The collection not found
           content:
@@ -557,6 +599,19 @@ paths:
                     type: number
                     example: 85000
                     description: "The number of bytes the user has stored."
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
         404:
           description: The collection was not found
           content:
@@ -597,6 +652,19 @@ paths:
               schema:
                 type: object
                 nullable: true
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
         404:
           description: The collection was not found
           content:
@@ -646,6 +714,19 @@ paths:
                     type: string
                     enum:
                       - "Invalid data"
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
         404:
           description: The collection was not found
           content:
@@ -684,6 +765,19 @@ paths:
                     type: number
                     example: 85000
                     description: "The number of bytes the user has stored."
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
         404:
           description: The collection was not found
           content:
@@ -745,6 +839,19 @@ paths:
                     type: string
                     enum:
                       - "Your UID or that file name don't add up to a valid path"
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
         404:
           description: The file data was not found
           content:
@@ -794,6 +901,30 @@ paths:
                     type: string
                     enum:
                       - "Your UID or that file name don't add up to a valid path"
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
+        404:
+          description: The file data was not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    enum:
+                      - "No data found"
     delete:
       tags:
         - storage
@@ -832,6 +963,30 @@ paths:
                     type: string
                     enum:
                       - "Your UID or that file name don't add up to a valid path"
+        403:
+          description: The caller does not have permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    enum:
+                      - "expired-token"
+                      - "missing-token"
+                      - "not-owner"
+        404:
+          description: The file data was not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    enum:
+                      - "No data found"
     parameters:
       - name: uid
         in: path
